# Scalable-CCD

./: .gitignore  AGENTS.md  BENCHMARK.md  CMakeLists.txt  CMakePresets.json  METAL_VS_CUDA_COMPARISON.md  README.md
cmake/recipes/: libigl.cmake
cmake/scalable_ccd/: scalable_ccdConfig.cmake.in
reports/: cuda_vs_metal.tex
scripts/: aggregate_reports.sh  compare_results.py  fetch_full_dataset.sh  run_benchmarks.sh  run_matrix.sh
src/scalable_ccd/: CMakeLists.txt  config.hpp.in
src/scalable_ccd/cuda/utils/: assert.cuh
src/scalable_ccd/metal/: CMakeLists.txt  broad_phase_metal.cpp  broad_phase_metal.hpp
src/scalable_ccd/metal/broad_phase/: aabb.hpp  broad_phase.cpp  broad_phase.hpp  sweep.cpp  sweep.hpp  utils.cpp  utils.hpp
src/scalable_ccd/metal/kernels/: broad_phase_sap.metal
src/scalable_ccd/metal/narrow_phase_legacy/: README.md  ccd.cpp  ccd.hpp  ccd_buffer.hpp  ccd_config.hpp  ccd_data.hpp  interval.hpp  narrow_phase.hpp  narrow_phase.mm  pack.hpp  root_finder.hpp  root_finder.mm
src/scalable_ccd/metal/runtime/: runtime.hpp  runtime.mm
src/scalable_ccd/metal2/: CMakeLists.txt
src/scalable_ccd/metal2/broad_phase/: aabb.hpp  broad_phase.cpp  broad_phase.hpp
src/scalable_ccd/metal2/runtime/: runtime.hpp  runtime.mm
src/scalable_ccd/metal2/shaders/: narrow_phase.metal
src/scalable_ccd/metalcpp/: CMakeLists.txt
src/scalable_ccd/metalcpp/broad_phase/: aabb.hpp  broad_phase.cpp  broad_phase.hpp
src/scalable_ccd/metalcpp/runtime/: metalcpp_symbols.mm  runtime.hpp  runtime.mm
tests/: CMakeLists.txt  export_cuda_results.py  export_metal_results.py  generate_comparison.py  generate_sap_report.py  test_broad_phase.cpp  test_broad_phase.cu  test_broad_phase_cuda_expected.cu  test_broad_phase_expected.cpp  test_broad_phase_metal.cpp  test_broad_phase_metal2.cpp  test_narrow_phase_metal2.cpp  test_performance_metal2.cpp
tests/results/: comparison_report.json  cuda_sap_armadillo_rollers_rtx2000ada.json  cuda_sap_armadillo_rollers_rtx3090.json  cuda_sap_cloth_ball_ee.json  cuda_sap_cloth_ball_rtx2000ada.json  cuda_sap_cloth_ball_rtx3090.json  cuda_sap_cloth_ball_vf.json  cuda_sap_cloth_funnel_rtx2000ada.json  cuda_sap_cloth_funnel_rtx3090.json  cuda_sap_n_body_rtx2000ada.json  cuda_sap_n_body_rtx3090.json  cuda_sap_rod_twist_rtx2000ada.json  cuda_sap_rod_twist_rtx3090.json  cuda_sap_single_list_chain.json  cuda_sap_single_list_shared_vertex_filtered.json  cuda_sap_two_lists_cross_only.json  metal_sap_armadillo_rollers_apple_m4_max.json  metal_sap_cloth_ball_ee.json  metal_sap_cloth_ball_vf.json  metal_sap_cloth_funnel_apple_m4_max.json  metal_sap_n_body_apple_m4_max.json  metal_sap_single_list_chain.json  metal_sap_single_list_shared_vertex_filtered.json  metal_sap_two_lists_cross_only.json  metal_stq_cloth_ball_ee.json  metal_stq_cloth_ball_vf.json  metal_stq_single_list_chain.json  metal_stq_single_list_shared_vertex_filtered.json  metal_stq_two_lists_cross_only.json  metal_vs_cuda_comparison.json  report_sap_cloth_ball_ee.md  report_sap_cloth_ball_vf.md  report_sap_index.md  report_sap_metal_stq_cloth_ball_ee.md  report_sap_metal_stq_cloth_ball_vf.md  report_sap_metal_stq_single_list_chain.md  report_sap_metal_stq_single_list_shared_vertex_filtered.md  report_sap_metal_stq_two_lists_cross_only.md  report_sap_single_list_chain.md  report_sap_single_list_shared_vertex_filtered.md  (+1 more)
verifier/: CMakeLists.txt  README.md  aggregate.cpp  compare.cpp  compare.hpp  env_info.cpp  env_info.hpp  gpu_query.cu  gpu_query.cuh  io.cpp  io.hpp  main.cpp  queries.cpp  queries.hpp  report.cpp  report.hpp
verifier/scenarios/: default.json
